<resources>
    <string name="app_name">FIFA Goal Counter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FIFA Goal Counter</string>
    <string name="nav_header_subtitle">fifa@eaids.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_save">Speichern</string>

    <string name="menu_home">Home</string>
    <string name="menu_stats">Statistik</string>
    <string name="menu_data">Daten</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_share">Daten teilen</string>
    <string name="menu_adddata">Neue Daten eingeben</string>
    <string name="menu_updatedata">Update eingeben</string>

    //fragment_add_data
    <string name="fifa_version">FIFA Version</string>
    <string name="fifa_version_20">20</string>
    <string name="fifa_version_21">21</string>
    <string name="fifa_version_22">22</string>

    //OLD
    <string name="name_player2">Player2</string>
    <string name="name_player1">Player1</string>
    <string name="player">Spieler</string>
    <string name="goalpergame">Tore \npro Spiel</string>
    <string name="goalstotal">Tore \n insgesamt</string>
    <string name="goals_player2">Tor Player2</string>
    <string name="goals_player1">Tor Player1</string>
    <string name="goals">TORE</string>
    <string name="goals_zero">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="clear">Reset</string>
    <string name="played_games">Gespielte Spiele:</string>
    <string name="game_time_ellapsed">Zeit seit letztem Spiel:</string>
    <string name="title_activity_main2">FIFA Scorer Count</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_delete_all">Alle Löschen</string>
    <string name="action_export">Exportieren</string>
</resources>
