<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pie_chart">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/rowTopFirst"
                    android:layout_width="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center|start"
                    android:text="@string/player"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/rowTopSecond"
                    android:layout_column="2"
                    android:text="@string/goalpergame"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/rowTopThird"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@string/goalstotal"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/rowSecondFirst"
                    android:layout_column="1"
                    android:layout_gravity="center|start"
                    android:text="@string/name_player2"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            <TextView
                    android:id="@+id/rowSecondSecond"
                    android:layout_column="2"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="30sp" />

            <TextView
                    android:id="@+id/rowSecondThird"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:textAlignment="center"
                    android:textSize="30sp" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/rowThirdFirst"
                    android:layout_column="1"
                    android:layout_gravity="center|start"
                    android:text="@string/name_player1"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            <TextView
                    android:id="@+id/rowThirdSecond"
                    android:layout_column="2"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="30sp" />

            <TextView
                    android:id="@+id/rowThirdThird"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="30sp" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/rowFourthFirst"
                    android:layout_column="1"
                    android:layout_gravity="center|start"
                    android:text="Gesamt"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

            <TextView
                    android:id="@+id/rowFourthSecond"
                    android:layout_column="2"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/rowFourthThird"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />
        </TableRow>
    </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>